--- a/src/presentation/pages/Login/Login.styles.scss
+++ b/src/presentation/pages/Login/Login.styles.scss
@@ -25,6 +25,14 @@
 
     .submit {
       margin-top: 32px;
+
+      &:disabled {
+        background-color: $disabledBackground;
+        color: $disabledColor;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
     .link {
       text-align: center;
